--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10956,6 +10956,17 @@ nav li {
   clear: both;
 }
 
+.kuchikomi {
+  padding: 10px;
+  border: solid 1px #ddd;
+  border-radius: 5px;
+  margin: 10px 5px;
+}
+
+.kuchikomi li {
+  list-style: none;
+}
+
 aside {
   float: left;
 }
