--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -79,6 +79,18 @@ nav li {
   clear: both;
 }
 
+.kuchikomi {
+  padding: 10px;
+  border: solid 1px #ddd;
+  border-radius: 5px;
+  margin: 10px 5px;
+}
+
+.kuchikomi li {
+  list-style: none;
+}
+
+
 aside {
   float: left;
 }
