--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -108,3 +108,11 @@ footer {
   padding: 10px;
   font-size: 80%;
 }
+
+.alert {
+  position: relative;
+  padding: 1rem 1.25rem 1rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
