Add Procfile + varchar = 191

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10940,6 +10940,15 @@ nav li {
   margin: 10px 5px;
 }
 
+.item img {
+  max-width: 125px;
+}
+
+.item_img {
+  float: left;
+  margin-right: 30px;
+}
+
 .paginate ul {
   justify-content: center;
 }
@@ -10976,7 +10985,6 @@ aside {
 }
 
 .ad {
-  background: #ffd004;
   height: 200px;
 }
 
@@ -10991,5 +10999,23 @@ footer {
   margin-bottom: 1rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+}
+
+@media screen and (max-width: 480px) {
+  header h1 {
+    font-size: 24px;
+  }
+
+  nav ul {
+    margin: 0;
+  }
+
+  nav li {
+    font-size: 0.8rem;
+  }
+
+  .item {
+    font-size: 0.8rem;
+  }
 }
 
