--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,6 +63,15 @@ nav li {
   margin: 10px 5px;
 }
 
+.item img {
+  max-width: 125px;
+}
+
+.item_img {
+  float: left;
+  margin-right: 30px;
+}
+
 .paginate ul {
   justify-content: center;
 }
@@ -100,7 +109,7 @@ aside {
 }
 
 .ad {
-  background: #ffd004;
+  //background: #ffd004;
   height: 200px;
 }
 
@@ -115,4 +124,22 @@ footer {
   margin-bottom: 1rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+}
+
+@media screen and (max-width: 480px) {
+  header h1 {
+    font-size: 24px;
+  }
+
+  nav ul {
+    margin: 0;
+  }
+
+  nav li{
+    font-size: 0.8rem;
+  }
+
+  .item {
+    font-size: 0.8rem;
+  }
 }
