--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -64,7 +64,7 @@ nav li {
 }
 
 .item img {
-  max-width: 125px;
+  max-width: 115px;
 }
 
 .item_img {
@@ -99,7 +99,6 @@ nav li {
   list-style: none;
 }
 
-
 aside {
   float: left;
 }
@@ -108,9 +107,13 @@ aside {
   margin-bottom: 10px;
 }
 
+aside .category {
+  font-size: 0.8rem;
+  margin: 5px 0;
+}
+
 .ad {
-  //background: #ffd004;
-  height: 200px;
+  max-height: 300px;
 }
 
 footer {
@@ -141,5 +144,9 @@ footer {
 
   .item {
     font-size: 0.8rem;
+  }
+
+  .item img {
+    max-width: 100px;
   }
 }
