--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -112,6 +112,20 @@ aside .category {
   margin: 5px 0;
 }
 
+aside .ranking {
+  font-size: 0.9rem;
+  margin: 5px 0;
+  padding: 10px;
+}
+
+aside h3 {
+
+}
+
+aside .ranking img {
+  max-width: 100%;
+}
+
 .ad {
   max-height: 300px;
 }
