管理者以外は商品作成URLなどにアクセスできないように修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10995,6 +10995,12 @@ aside .ranking {
   padding: 10px;
 }
 
+.ranking-header {
+  background: #ffffe0;
+  border-radius: 5px;
+  padding: 5px 5px 5px 10px;
+}
+
 aside .ranking img {
   max-width: 100%;
 }
