--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -118,8 +118,10 @@ aside .ranking {
   padding: 10px;
 }
 
-aside h3 {
-
+.ranking-header {
+  background: #ffffe0;
+  border-radius: 5px;
+  padding: 5px 5px 5px 10px;
 }
 
 aside .ranking img {
@@ -152,7 +154,7 @@ footer {
     margin: 0;
   }
 
-  nav li{
+  nav li {
     font-size: 0.8rem;
   }
 
