--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10941,12 +10941,28 @@ nav li {
 }
 
 .item img {
-  max-width: 115px;
+  max-width: 150px;
 }
 
 .item_img {
   float: left;
-  margin-right: 30px;
+  margin: 5px 30px 0 15px;
+}
+
+.item-detail-img {
+  float: left;
+  margin: 20px 50px 0 20px;
+}
+
+.item-description {
+  margin-top: 15px;
+}
+
+.item_tag {
+  color: gray;
+  font-size: 0.75rem;
+  text-align: right;
+  margin-right: 10px;
 }
 
 .paginate ul {
@@ -10978,6 +10994,7 @@ nav li {
 
 .kuchikomi th {
   vertical-align: baseline;
+  font-weight: normal;
 }
 
 aside {
@@ -11045,6 +11062,19 @@ footer {
 
   .item img {
     max-width: 100px;
+  }
+
+  .item-img {
+    margin: 20px 25px 0 20px;
+  }
+
+  .kuchikomi th {
+    width: 25%;
+    font-size: 0.8rem;
+  }
+
+  .kuchikomi td {
+    font-size: 0.8rem;
   }
 }
 
