--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11014,6 +11014,16 @@ aside .category {
   margin: 5px 0;
 }
 
+.category_edit_menu {
+  font-size: 12px;
+  font-weight: normal;
+  float: right;
+}
+
+.category_edit {
+  float: right;
+}
+
 aside .ranking {
   font-size: 0.9rem;
   margin: 5px 0;
