--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -140,6 +140,12 @@ aside .category {
   margin: 5px 0;
 }
 
+.category_edit_menu {
+  font-size: 12px;
+  font-weight: normal;
+  float: right;
+}
+
 aside .ranking {
   font-size: 0.9rem;
   margin: 5px 0;
