--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -72,6 +72,16 @@ nav li {
   margin: 5px 30px 0 15px;
 }
 
+.item-top {}
+
+.item-top p {
+  margin-bottom: 0.25rem;
+}
+
+.detail_link {
+  margin: 0 0 0 20px
+}
+
 .item-detail-img {
   float: left;
   margin: 20px 50px 0 20px;
@@ -86,10 +96,6 @@ nav li {
   font-size: 0.75rem;
   text-align: right;
   margin-right: 10px;
-}
-
-.detail_link {
-  margin: 0 0 0 20px
 }
 
 .paginate ul {
